--- a/package.json
+++ b/package.json
@@ -23,10 +23,8 @@
   },
   "homepage": "https://github.com/99xt/azure-jwt-verify#readme",
   "dependencies": {
-    "bluebird": "^3.4.7",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.4",
-    "request": "^2.79.0",
+    "axios": "^0.23.0",
     "rsa-pem-from-mod-exp": "^0.8.4"
   }
 }
